Address Layout Alignment Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@ body {
   font-family: 'Lato', sans-serif;
   line-height: 1.5;
 }
-
+/**/
 h3 + p, h3 + div { margin-top: -20px;}
 h4 + img {margin-top: -20px;}
 h5 {margin: 0 auto;}
@@ -61,13 +61,12 @@ li button:first-child {
 }
 .list li button + button {background: #797979;}
 .list li button:last-child {background: #B7B7B7;}
-.tempLayout {padding-top: 16px;}
 img + p {margin-top: 0px;}
 img {
   width: 100%;
   height: auto;
 }
-
+/**/
 @media only screen and (min-width: 1000px) {
   body {
     margin: 0 8em;
@@ -117,8 +116,8 @@ ul.notes {
   padding: 4px 8px;
 }
 .advancedFunction {
-  margin: 0;
-  padding: 0;
+  margin: 8px;
+  padding: 8px 0;
   display: grid;
   grid-auto-flow: row; 
   grid-gap: 0;   
